<b><u> v2.31, 14.03.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add an compatibily issue in flightMap.
<font color=#FF8C00>&#9830;</font> Remove my own debugTool. I fucked this up.
<font color=#FF8C00>&#9830;</font> Add a frame for the total amount of auctions.
<font color=#FF8C00>&#9830;</font> Add the possibility to buy with Alt+Click a stack of merchants.
<font color=#FF8C00>&#9830;</font> Add more locale files to prevent an error. (Not translatet yet.)
<font color=#FF8C00>&#9830;</font> Don't force the fonts in my WeakAura skin. This fixes #47
<font color=#FF8C00>&#9830;</font> Add back the mover for the OrderHallCommandBar. Also add an option to hide it.

<b><u> v2.30, 03.03.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add a Masque addon profile.
<font color=#FF8C00>&#9830;</font> Add some CVars to the install.
<font color=#FF8C00>&#9830;</font> Skin the QuestMapFrame DetailsFrame.
<font color=#FF8C00>&#9830;</font> Delete the custom guild skin.
<font color=#FF8C00>&#9830;</font> Update tooltip icon code.
<font color=#FF8C00>&#9830;</font> Update orderhall skin.
<font color=#FF8C00>&#9830;</font> Overhaul my layout (WIP) as usual.
<font color=#FF8C00>&#9830;</font> Add an own filter for "RaidCDs" most likly copy&paste the "TurtleDebuffs" but removed a few spells that are not necessary for me. => "MER_RaidCDs"
<font color=#FF8C00>&#9830;</font> Add a FlightPoint Frame next to the TaxiMap. All credits belong to DuffedUI.

<b><u> v2.29, 17.02.2017</b></u>
<font color=#FF8C00>&#9830;</font> Add own combat state indicator.
<font color=#FF8C00>&#9830;</font> Hide some blizzard errors by default. To add or remove an error you have to look at the core/filter/errorFilter.lua file.
<font color=#FF8C00>&#9830;</font> Overhaul the profile creation messages. Now it is in the Install frame and will not spam the chat anymore. Credits: Benik
<font color=#FF8C00>&#9830;</font> Profiles for KuiNamePlates, SorhaQuestLog, Details.